Fix Vercel deployment - Create static demo version
- Add static HTML files (index.html, rpg.html, cave.html)
- Update vercel.json for static file routing
- Create simplified demo versions with client-side JavaScript
- Remove serverless function dependency
- Add demo notices explaining local server benefits
- Fix Vercel deployment compatibility issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "simple_web_games.py",
-      "use": "@vercel/python"
-    }
-  ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "simple_web_games.py"
+      "src": "/rpg",
+      "dest": "/rpg.html"
+    },
+    {
+      "src": "/cave",
+      "dest": "/cave.html"
+    },
+    {
+      "src": "/",
+      "dest": "/index.html"
     }
   ]
 }
+
